<resources>
    <string name="app_name">PokeWiki</string>
    <string name="login_email_hint">请输入邮箱</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="register">注册</string>
    <string name="register_email_hint">请输入注册邮箱</string>
    <string name="register_password_hint">请输入登陆密码</string>
    <string name="register_password_confirm_hint">请确认登陆密码</string>
    <string name="cancel">取消</string>
    <string name="certain">确认</string>
    <string name="search_record">搜索记录:</string>
    <string name="attr">属性:</string>
    <string name="generation">世代:</string>
    <string name="info">信息</string>
    <string name="state">状态</string>
    <string name="move">招式</string>
    <string name="class_text">类别</string>
    <string name="habitat">栖息地</string>
    <string name="character">特性</string>
    <string name="hide_character">隐藏特性</string>
    <string name="shape">形状</string>
    <string name="HP">HP</string>
    <string name="zero">0</string>
    <string name="ATK">ATK</string>
    <string name="DEF">DEF</string>
    <string name="SATK">SATK</string>
    <string name="SDEF">SDEF</string>
    <string name="SPD">SPD</string>
    <string name="power">威力</string>
    <string name="PP">PP</string>
    <string name="accurate">命中</string>
    <string name="level_move">可学会的招式</string>
    <string name="default_nickname">黑大帅</string>
    <string name="default_proverb">在这里，探索宝可梦</string>
    <string name="my_collection">我的收藏</string>
    <string name="edit_profile">编辑个人信息</string>
    <string name="advice">意见反馈</string>
    <string name="auto_cache">自动缓存</string>
    <string name="cache_info">开启自动缓存后可离线查看信息</string>
    <string name="logout">退出登录</string>
    <string name="UserInfo">个人信息编辑</string>
    <string name="change_password">修改密码</string>
    <string name="confirm">确认</string>
    <string name="new_password">请输入新密码</string>
    <string name="old_password">请输入旧密码</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="add_feedback">请添加反馈内容......</string>
    <string name="add_pic">添加图片</string>
    <string name="mycollection">我的收藏</string>
    <string name="take_photo">拍照</string>
    <string name="from_album">从相册中选择</string>
    <string name="search_by_name">按名字搜索</string>
    <string name="current_version">当前版本0.0.0.1</string>
    <string name="check_update">检查更新</string>
    <string name="like_pokewiki">给PokeWiki好评</string>
    <string name="welcome_page">欢迎页</string>
    <string name="contact_us">联系我们</string>
    <string name="law">用户服务协议 | 隐私政策 | 投诉指引 | 社区自律公约</string>
    <string name="copyright">Copyright@2022–2022 PokeWiki-Inc.All Rights Reserved</string>
    <string name="skip">跳过 3s</string>

</resources>