<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_bottom_photo"
    android:background="@drawable/card_style"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialog_photo_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@null"
        android:textColor="#3A3D42"
        android:text="@string/take_photo"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC"/>

    <Button
        android:id="@+id/dialog_album_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@null"
        android:textColor="#3A3D42"
        android:text="@string/from_album"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#DCDCDC"/>

    <Button
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@null"
        android:textColor="#3A3D42"
        android:text="@string/cancel"
        android:textSize="16sp" />

</LinearLayout>