<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_edit_user_info_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/poke_ball_red"
        app:cardElevation="10dp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/profile_edit_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp"
                android:src="@drawable/white_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_edit_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/profile_edit_back_btn"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_change_password_old_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_user_info_background"
        app:layout_constraintHeight_percent="0.06"

        app:layout_constraintWidth_percent="0.64">

        <EditText
            android:id="@+id/profile_change_password_old_password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"
/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_change_password_new_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_change_password_old_password"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.64">

        <EditText
            android:id="@+id/profile_change_password_new_password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_change_password_confirm_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="92dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"

        app:cardBackgroundColor="@color/poke_ball_red"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_change_password_new_password"
        app:layout_constraintWidth_percent="0.67">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>