<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_pikachu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-70dp"
        android:src="@drawable/login_pikachu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_email_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/login_email_hint"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_password_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/login_email_card"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-black"
        android:paddingTop="10dp"
        android:text="@string/login_register"
        android:textColor="#90766F6F"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="@id/login_btn" />

    <ImageView
        android:id="@+id/login_mewtwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="-20dp"
        android:src="@drawable/login_mewtwo"

        app:layout_constraintBottom_toBottomOf="@+id/login_btn"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/login_register_btn"
        app:layout_constraintWidth_percent="0.29" />

    <ImageView
        android:id="@+id/login_mew"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/login_mew"

        app:layout_constraintBottom_toBottomOf="@+id/login_mewtwo"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toEndOf="@+id/login_register_btn"
        app:layout_constraintWidth_percent="0.25" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="92dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"

        app:cardBackgroundColor="@color/poke_ball_red"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_card"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#90FEFAFA"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>