<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_squirtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="-60dp"
        android:src="@drawable/register_squirtle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/register_email_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_logo"
        app:layout_constraintWidth_percent="0.8"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <EditText
            android:id="@+id/register_email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/register_email_hint"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:inputType="textEmailAddress"
            android:paddingEnd="15dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/register_password_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_card"
        app:layout_constraintWidth_percent="0.8"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/register_password_confirm_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/register_password_card"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/register_password_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/register_password_confirm_hint"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/register_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_confirm_card"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:gravity="center"
            android:textColor="#90FEFAFA"
            android:textSize="14sp"
            android:fontFamily="sans-serif-black"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/register_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/poke_ball_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/register_btn"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>